<resources>
    <string name="app_name">bkd</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="choose_dates">Choose dates</string>
    <string name="pick_up_time">Pick up time</string>
    <string name="return_time">Return time</string>
    <string name="pick_up_location">Pick up Location</string>
    <string name="return_location">Return Location</string>
    <string name="date">Date</string>
    <string name="custom_location">Custom location</string>
    <string name="search">Search</string>
    <string name="b">B</string>
    <string name="_16_5_m">16,5 m³</string>
    <string name="_499_kg">499 kg</string>
    <string name="_2_15_x_1_55_x_1_36_m">2,15 x 1,55 x 1,36 m</string>
    <string name="tow_bar">Tow Bar</string>
    <string name="day">/ day</string>
    <string name="_54_99">54.99</string>
    <string name="ducato_koelwagen">Ducato Koelwagen</string>
    <string name="vans">Vans</string>
    <string name="fiat_doblo_l1h1">Fiat Doblo L1H1</string>
    <string name="label_name_surname">Name Surname</string>
    <string name="label_about_us">About Us</string>
    <string name="label_my_reservation">My reservation</string>
    <string name="label_customer_service">Customer service</string>
    <string name="label_settings">Settings</string>
    <string name="label_log_out">Log out</string>
    <string name="label_2021_all_rights_reserved">© 2021 All rights reserved</string>
    <string name="label_terms_of_use">Terms of Use</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_time">Time</string>
    <string name="label_bkd_office">BKD Office</string>
    <string name="label_see_map">See map</string>
    <string name="label_parking_1">Parking 1</string>
    <string name="label_parking_2">Parking 2</string>
    <string name="google_maps_key">AIzaSyDJmanwnDx8HE5cBeMtTA92EdgUCU3gXG4</string>
    <string name="label_address_name">Address name</string>
    <string name="label_route">Route</string>
    <string name="label_ok">OK</string>
    <string name="label_location_name">Location Name</string>
    <string name="_22">22</string>
    <string name="feb">Feb</string>
    <string name="mon">Mon</string>
    <string name="_15_30">15:30</string>
    <string name="label_search_results">Search Results</string>
    <string name="town_bar">Town Bar</string>
    <string name="label_transmission">Transmission</string>
    <string name="label_exterior">Exterior</string>
    <string name="label_5_91_x_2_42_x_2_82_m">5.91 x 2.42 x 2.82 m</string>
    <string name="label_double_cable">Double cabin</string>
    <string name="lable_tail_lift">Tail Lift</string>
    <string name="label_gps_navigation">GPS navigation</string>
    <string name="label_air_conditioning">Air conditioning</string>
    <string name="label_manual">Manual</string>
    <string name="label_autamatic">Automatic</string>
</resources>