<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="app.mimo.it.bkd.feature.home.HomeFragment" />

        <variable
            name="mViewModel"
            type="app.mimo.it.bkd.viewModel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_700">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutDate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_field_height"
            android:layout_marginStart="@dimen/margin_M"
            android:layout_marginTop="@dimen/margin_M"
            android:layout_marginEnd="@dimen/margin_M"
            android:background="@drawable/background_field"
            app:layout_constraintTop_toTopOf="parent"
            app:mViewModel="@{mViewModel}"
            app:openCalendar="@{fragment.fragmentManager}">

            <ImageView
                android:id="@+id/imageCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_M"
                android:src="@drawable/ic_calendar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textChooseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_M"
                android:text="@string/choose_dates"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_XS"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:show="@{mViewModel.titleDay}" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutStartDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toStartOf="@id/dateLine"
                app:layout_constraintStart_toStartOf="parent"
                app:show="@{mViewModel.showDate}">

                <TextView
                    android:id="@+id/textStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_M_1"
                    android:textColor="@color/purple_200"
                    android:textSize="@dimen/text_size_XL"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:value="@{mViewModel.startDay}"
                    tools:text="25" />

                <TextView
                    android:id="@+id/textStartMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_XXS_Big"
                    android:textColor="@color/purple_200"
                    android:textSize="@dimen/text_size_MIN"
                    app:layout_constraintStart_toEndOf="@id/textStartDate"
                    app:layout_constraintTop_toTopOf="@id/textStartDate"
                    app:value="@{mViewModel.startMonth}"
                    tools:text="Feb" />

                <TextView
                    android:id="@+id/textStartWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_XXS_Big"
                    android:textColor="@color/purple_200"
                    android:textSize="@dimen/text_size_MIN"
                    app:layout_constraintStart_toEndOf="@id/textStartDate"
                    app:layout_constraintTop_toBottomOf="@id/textStartMonth"
                    app:value="@{mViewModel.startWeek}"
                    tools:text="Mon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/dateLine"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_XXS"
                android:layout_marginBottom="@dimen/margin_XXS"
                android:background="@color/color_line"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:show="@{mViewModel.showDate}" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutEndDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/dateLine"
                app:show="@{mViewModel.showDate}">

                <TextView
                    android:id="@+id/textEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_M_1"
                    android:textColor="@color/purple_200"
                    android:textSize="@dimen/text_size_XL"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:value="@{mViewModel.endDay}"
                    tools:text="25" />

                <TextView
                    android:id="@+id/textEndMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_XXS_Big"
                    android:textColor="@color/purple_200"
                    android:textSize="@dimen/text_size_MIN"
                    app:layout_constraintStart_toEndOf="@id/textEndDate"
                    app:layout_constraintTop_toTopOf="@id/textEndDate"
                    app:value="@{mViewModel.endMonth}"
                    tools:text="Feb" />

                <TextView
                    android:id="@+id/textEndWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_XXS_Big"
                    android:textColor="@color/purple_200"
                    android:textSize="@dimen/text_size_MIN"
                    app:layout_constraintStart_toEndOf="@id/textEndDate"
                    app:layout_constraintTop_toBottomOf="@id/textEndMonth"
                    app:value="@{mViewModel.endWeek}"
                    tools:text="Mon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textUnderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_MIN"
            app:layout_constraintStart_toStartOf="@id/layoutDate"
            app:layout_constraintTop_toBottomOf="@id/layoutDate"
            app:show="@{mViewModel.showDate}"
            tools:text="Date" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutTime"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_field_height"
            android:layout_marginStart="@dimen/margin_M"
            android:layout_marginTop="@dimen/margin_XL"
            android:layout_marginEnd="@dimen/margin_M"
            android:background="@drawable/background_field"
            app:layout_constraintTop_toBottomOf="@id/layoutDate">

            <View
                android:id="@+id/timeLine"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_XXS"
                android:layout_marginBottom="@dimen/margin_XXS"
                android:background="@color/color_line"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ImagePickUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_S"
                android:src="@drawable/ic_pick_up_car"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/timeLine"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textPickUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_M"
                android:text="@string/pick_up_time"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_XS"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageReturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_M"
                android:src="@drawable/ic_return_car"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textReturnTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_XL"
                android:text="@string/return_time"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_XS"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/timeLine"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutPickUpLocation"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_field_height"
            android:layout_marginStart="@dimen/margin_M"
            android:layout_marginTop="@dimen/margin_XL"
            android:layout_marginEnd="@dimen/margin_S_SMALL"
            android:background="@drawable/background_field"
            app:layout_constraintEnd_toStartOf="@id/guideLineVerticalCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutTime">

            <ImageView
                android:id="@+id/imagePickUpLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_S_BIG"
                android:src="@drawable/ic_arrow_down"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textPickUpLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_M"
                android:text="@string/pick_up_location"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_XS"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutReturnLocation"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_field_height"
            android:layout_marginStart="@dimen/margin_S_SMALL"
            android:layout_marginTop="@dimen/margin_XL"
            android:layout_marginEnd="@dimen/margin_M"
            android:background="@drawable/background_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideLineVerticalCenter"
            app:layout_constraintTop_toBottomOf="@id/layoutTime">

            <TextView
                android:id="@+id/textReturnLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_S_BIG"
                android:text="@string/return_location"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_XS"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageReturnLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_S_BIG"
                android:src="@drawable/ic_arrow_down"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <CheckBox
            android:id="@+id/pickUpCheckBox"
            style="@style/AppCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_S_SMALL"
            android:buttonTint="@color/color_check_box"
            android:text="@string/custom_location"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/text_size_M"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutPickUpLocation" />

        <CheckBox
            android:id="@+id/returnCheckBox"
            style="@style/AppCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_XXS"
            android:buttonTint="@color/color_check_box"
            android:text="@string/custom_location"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/text_size_M"
            app:layout_constraintStart_toEndOf="@id/guideLineVerticalCenter"
            app:layout_constraintTop_toBottomOf="@id/layoutReturnLocation" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineVerticalCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
